force-app/main/default/objects/Order_Category_Definition__c/Order_Category_Definition__c.object-meta.xml
<CustomObject>
    <label>Order Category Definition</label>
    <nameField>
        <label>Order Category Definition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Category Definitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>