force-app/main/default/objects/Order_Category_Definition__c/fields/Calculated_Priority__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Priority__c</fullName>
    <formula>((Minimum_Product_Count__c + Number_of_Criteria__c) *10 ) +  Manual_Priority_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>((Minimum Product Count + Number of Criteria) * 10 ) +  Manual Priority Adjustment</inlineHelpText>
    <label>Calculated Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>