force-app/main/default/objects/Order_Category_Definition__c/fields/Manual_Priority_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>Manual_Priority_Adjustment__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Generally used by Exclusion Definitions to bypass the automated &quot;Calculated Priority&quot;, which takes this value into account.</inlineHelpText>
    <label>Manual Priority Adjustment</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>