force-app/main/default/objects/Order_Category_Definition__c/fields/Minimum_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Product_Count__c</fullName>
    <inlineHelpText>Accumulates the &quot;Minimum Quantity&quot; from each Critera to calculate the minimum count of products required to qualify for this Category Definition</inlineHelpText>
    <label>Minimum Product Count</label>
    <summarizedField>Order_Category_Criteria__c.Minimum_Quantity__c</summarizedField>
    <summaryForeignKey>Order_Category_Criteria__c.Order_Category_Definition__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>