force-app/main/default/objects/Order_Category_Definition__c/fields/Number_of_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Criteria__c</fullName>
    <label>Number of Criteria</label>
    <summaryForeignKey>Order_Category_Criteria__c.Order_Category_Definition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>