force-app/main/default/objects/Order_Category_Definition__c/fields/Order_Category_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Category_Type__c</fullName>
    <label>Order Category Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
            </value>
            <value>
                <fullName>Product Bundle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>