force-app/main/default/objects/Order_Category_Definition__c/fields/Standard_Production_Time__c.field-meta.xml
<CustomField>
    <fullName>Standard_Production_Time__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Standard Production Time</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>