force-app/main/default/objects/Order_Category_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Is_Active__c</columns>
    <columns>NAME</columns>
    <columns>Calculated_Priority__c</columns>
    <columns>Manual_Priority_Adjustment__c</columns>
    <columns>Number_of_Criteria__c</columns>
    <columns>Minimum_Product_Count__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>Standard_Production_Time__c</columns>
    <columns>Order_Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>