force-app/main/default/objects/Order_Category_Definition__c/listViews/All_Bundles_Incl_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Bundles_Incl_Inactive</fullName>
    <columns>Is_Active__c</columns>
    <columns>NAME</columns>
    <columns>Calculated_Priority__c</columns>
    <columns>Number_of_Criteria__c</columns>
    <columns>Minimum_Product_Count__c</columns>
    <columns>Market_Unit__c</columns>
    <columns>Order_Category_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Order_Category_Type__c</field>
        <operation>equals</operation>
        <value>Product Bundle</value>
    </filters>
    <label>All Bundles Incl. Inactive</label>
</ListView>